--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-chatbot-kit": "^1.1.20",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
